[package]
name = "tag-maid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
chrono = "0.4.23"
anyhow = "1.0.69"
eframe = "0.21.3"
egui = "0.21.0"
image = { version = "0.24.6", features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3.3"
tempfile = "3"
regex = "1"
hex = "0.4.3"
rand = {version = "0.8.5", optional = true}
env_logger = "0.9.0"
log = "0.4"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
im-rc = "15.1.0"
once_cell = "1.17.2"


[features]
ui_debug=[]
new_search=[]
import_samples=[]
manual=[]

[dev-dependencies]
rand = {version = "0.8.5"}
