[package]
name = "tagmaid-app"
version = "0.0.0"
description = "A tagging based file explorer"
authors = ["Broward Apps"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0.0"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
chrono = "0.4.23"
anyhow = "1.0.69"
image = { version = "0.24.6", features = ["jpeg", "png"] }
blake3 = "1.3.3"
tempfile = "3"
regex = "1"
hex = "0.4.3"
rand = {version = "0.8.5", optional = true}
env_logger = "0.9.0"
log = "0.4"
once_cell = "1.18.0"
thiserror = "1.0.44"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
ui_debug= []
new_search= []
import_samples= []
manual= []

[dev-dependencies]
rand = {version = "0.8.5"}
